// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxFieldArray expect to render with default checked fields 1`] = `
Array [
  <div
    className="pf-c-check"
  >
    <input
      aria-invalid={false}
      checked={false}
      className="pf-c-check__input"
      disabled={false}
      id="pci"
      name="policies[0]"
      onChange={[Function]}
      type="checkbox"
      value="12345"
    />
    <label
      className="pf-c-check__label"
      htmlFor="pci"
    >
      pci
    </label>
  </div>,
  <div
    className="pf-c-check"
  >
    <input
      aria-invalid={false}
      checked={true}
      className="pf-c-check__input"
      disabled={false}
      id="hipaa"
      name="policies[1]"
      onChange={[Function]}
      type="checkbox"
      value="1111"
    />
    <label
      className="pf-c-check__label"
      htmlFor="hipaa"
    >
      hipaa
    </label>
  </div>,
]
`;

exports[`CheckboxFieldArray expect to render without default checked fields 1`] = `
Array [
  <div
    className="pf-c-check"
  >
    <input
      aria-invalid={false}
      checked={false}
      className="pf-c-check__input"
      disabled={false}
      id="pci"
      name="policies[0]"
      onChange={[Function]}
      type="checkbox"
      value="12345"
    />
    <label
      className="pf-c-check__label"
      htmlFor="pci"
    >
      pci
    </label>
  </div>,
  <div
    className="pf-c-check"
  >
    <input
      aria-invalid={false}
      checked={false}
      className="pf-c-check__input"
      disabled={false}
      id="hipaa"
      name="policies[1]"
      onChange={[Function]}
      type="checkbox"
      value="1111"
    />
    <label
      className="pf-c-check__label"
      htmlFor="hipaa"
    >
      hipaa
    </label>
  </div>,
]
`;
